--- a/index.html
+++ b/index.html
@@ -1,96 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<head>
     <meta charset="UTF-8">
     <title>TIERS SF - Ranking Oficial</title>
 
     <!-- Tipografías esports -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
 
-    <!-- Estilos TIERS SF -->
-    <style>
-        body {
-            background-color: #121212;
-            color: white;
-            font-family: 'Orbitron', 'Rajdhani', sans-serif;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 25px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: auto;
-            max-width: 1000px;
-        }
-        th, td {
-            padding: 12px 16px;
-            text-align: center;
-        }
-        th {
-            background-color: #1e1e1e;
-            color: white;
-            font-weight: 700;
-            font-size: 14px;
-        }
-        tr {
-            transition: background-color 0.3s ease;
-        }
-        tr:hover {
-            background-color: #1f1f1f;
-        }
-        .rank-cell {
-            color: #fff;
-            border-radius: 6px;
-            padding: 6px 10px;
-            display: inline-block;
-            font-weight: bold;
-            font-size: 13px;
-        }
+    <!-- Estilos externos TIERS SF -->
+    <link rel="stylesheet" href="style.css">
+</head>
 
-        /* Colores oficiales TIERS SF */
-        .HT1 { background-color: #ffd700; color: #000; }
-        .LT1 { background-color: #daa520; color: #000; }
-        .HT2 { background-color: #c0c0c0; color: #000; }
-        .LT2 { background-color: #a9a9a9; color: #000; }
-        .HT3 { background-color: #8e5c42; }
-        .LT3 { background-color: #5d4037; }
-        .HT4 { background-color: #c08081; }
-        .LT4 { background-color: #a67c7c; }
-        .HT5 { background-color: #607d8b; }
-        .LT5 { background-color: #546e7a; }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            table, thead, tbody, th, td, tr {
-                display: block;
-            }
-            th {
-                text-align: left;
-            }
-            tr {
-                margin-bottom: 15px;
-            }
-            td {
-                text-align: right;
-                padding-left: 50%;
-                position: relative;
-            }
-            td::before {
-                content: attr(data-label);
-                position: absolute;
-                left: 16px;
-                width: 45%;
-                padding-right: 10px;
-                white-space: nowrap;
-                text-align: left;
-                font-weight: bold;
-            }
-        }
-    </style>
 </head>
 
 <body>
