--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
         </thead>
         <tbody></tbody>
     </table>
+    <div id="playerModal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+
+        <h2 id="modalNick"></h2>
+        <p id="modalRegion"></p>
+        <p id="modalScore"></p>
+        <p id="modalPosition"></p>
+
+        <h3>Rangos</h3>
+        <div id="modalRanks"></div>
+    </div>
+</div>
+
 
     <!-- Script que carga tiers_ranking.json -->
     <script src="script.js"></script>
