--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
 <body>
     <h1>Ranking Oficial TIERS SF</h1>
+    
+    <div id="searchContainer">
+    <input type="text" id="searchInput" placeholder="Buscar jugador..." />
+    <button id="searchBtn">Buscar</button>
+</div>
+
+<div id="searchResult" style="display:none;"></div>
+
 
     <table id="rankingTable">
         <thead>
