--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<head>
     <meta charset="UTF-8">
     <title>TIERS SF - Ranking Oficial</title>
 
@@ -12,19 +11,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-</head>
-
 <body>
-    <h1>Ranking Oficial TIERS SF</h1>
-    
+
+    <!-- ============================
+         HEADER ESPORTS TIERS SF
+         ============================ -->
+    <div id="tiers-header">
+        <h1 class="header-title">TIERS SF — RANKING OFICIAL</h1>
+        <p class="header-subtitle">Sistema competitivo no oficial de Superfighters Deluxe</p>
+        <div class="header-divider"></div>
+    </div>
+
+    <!-- Buscador -->
     <div id="searchContainer">
-    <input type="text" id="searchInput" placeholder="Buscar jugador..." />
-    <button id="searchBtn">Buscar</button>
-</div>
+        <input type="text" id="searchInput" placeholder="Buscar jugador..." />
+        <button id="searchBtn">Buscar</button>
+    </div>
 
-<div id="searchResult" style="display:none;"></div>
+    <div id="searchResult" style="display:none;"></div>
 
-
+    <!-- Tabla -->
     <table id="rankingTable">
         <thead>
             <tr>
@@ -39,22 +45,24 @@
         </thead>
         <tbody></tbody>
     </table>
+
+    <!-- Modal jugador -->
     <div id="playerModal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn">&times;</span>
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
 
-        <h2 id="modalNick"></h2>
-        <p id="modalRegion"></p>
-        <p id="modalScore"></p>
-        <p id="modalPosition"></p>
+            <h2 id="modalNick"></h2>
+            <p id="modalRegion"></p>
+            <p id="modalScore"></p>
+            <p id="modalPosition"></p>
 
-        <h3>Rangos</h3>
-        <div id="modalRanks"></div>
+            <h3>Rangos</h3>
+            <div id="modalRanks"></div>
+        </div>
     </div>
-</div>
-
 
     <!-- Script que carga tiers_ranking.json -->
     <script src="script.js"></script>
+
 </body>
 </html>
