--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
     <!-- Script que carga tiers_ranking.json -->
     <script src="script.js"></script>
+   <footer id="tiers-footer">
+    TIERS SF © 2026 — Sistema competitivo no oficial de Superfighters Deluxe
+</footer> 
 
 </body>
 </html>
