Add top message to index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </thead>
         <tbody></tbody>
     </table>
+    <p id="topMessage">Mostrando TOP 10 — Usá el buscador para ver otros jugadores.</p>
 
     <!-- Modal jugador -->
     <div id="playerModal" class="modal">
