Add autocomplete list to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
 
     <div id="searchResult" style="display:none;"></div>
+    <ul id="autocompleteList"></ul>
 
     <!-- Tabla -->
     <table id="rankingTable">
