Refactor header and footer structure in index.html

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- ============================
          HEADER ESPORTS TIERS SF
          ============================ -->
-    <div id="tiers-header">
+    <header id="tiers-header">
         <h1 class="header-title">TIERS SF — RANKING OFICIAL</h1>
         <p class="header-subtitle">Sistema competitivo no oficial de Superfighters Deluxe</p>
         <div class="header-divider"></div>
-    </div>
+    </header>
 
     <!-- Buscador -->
     <div id="searchContainer">
@@ -46,6 +46,7 @@
         </thead>
         <tbody></tbody>
     </table>
+
     <p id="topMessage">Mostrando TOP 10 — Usá el buscador para ver otros jugadores.</p>
 
     <!-- Modal jugador -->
@@ -63,11 +64,13 @@
         </div>
     </div>
 
-    <!-- Script que carga tiers_ranking.json -->
+    <!-- Script -->
     <script src="script.js"></script>
-   <footer id="tiers-footer">
-    TIERS SF © 2026 — Sistema competitivo no oficial de Superfighters Deluxe
-</footer> 
+
+    <!-- Footer -->
+    <footer id="tiers-footer">
+        TIERS SF © 2026 — Sistema competitivo no oficial de Superfighters Deluxe
+    </footer>
 
 </body>
 </html>
